design: fixed gaps and box-shadows

--- a/src/components/ScoreColumnComponent/PredictedScore/PredictedScore.css
+++ b/src/components/ScoreColumnComponent/PredictedScore/PredictedScore.css
@@ -10,7 +10,7 @@
   border-radius: 12px;
   padding: 12px;
   /* margin-top: 24px; */
-  box-shadow: rgba(0, 0, 0, 0.12) -0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  box-shadow: rgba(0, 0, 0, 0.12) -0px 1px 3px, rgba(0, 0, 0, 0.089) 0px 0px 2px;
   background-image: radial-gradient(#e8e8e854 0.3px, var(--bg-secondary) 0.4px);
   background-size: 10px 10px;
 }
